DFR-1503: FR Send order event - CCD address field for applicantAddress validation